apps/headscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/instance: headscale
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: restricted
