apps/headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  labels:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/instance: headscale
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/instance: headscale
  ports:
    - name: http-control
      protocol: TCP
      port: 8080
      targetPort: http-control
    - name: http-metrics
      protocol: TCP
      port: 9090
      targetPort: http-metrics
    - name: stun
      protocol: UDP
      port: 3478
      targetPort: stun
