apps/headscale/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: headscale
  labels:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/instance: headscale
spec:
  parentRefs:
    - name: cilium-gateway-system
      namespace: kube-system
      sectionName: passthrough
  hostnames:
    - connect.guedescloud.com.br
  rules:
    - backendRefs:
        - name: headscale
          port: 8080
